@@ -41,14 +41,14 @@ ROBOT: {
 	$ENV{'HTTP_USER_AGENT'} = 'Mozilla/5.0 (compatible; bingbot/2.0; +http://www.bing.com/bingbot.htm)';
 	$i = new_ok('CGI::Info');
 	ok($i->is_robot() == 1);
-	ok($i->browser_type() eq 'robot');
+	ok($i->browser_type() eq 'search_engine');
 
 	$ENV{'REMOTE_ADDR'} = '119.63.196.107';
 	$ENV{'HTTP_USER_AGENT'} = 'Mozilla/5.0 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)';
 
 	$i = new_ok('CGI::Info');
 	ok($i->is_robot() == 1);
-	ok($i->browser_type() eq 'robot');
+	ok($i->browser_type() eq 'search_engine');
 
 	$ENV{'REMOTE_ADDR'} = '207.241.237.233';
 	$ENV{'HTTP_USER_AGENT'} = 'Mozilla/5.0 (compatible; archive.org_bot +http://www.archive.org/details/archive.org_bot)';
