@@ -2,6 +2,7 @@ Revision history for CGI-Info
 
 0.50
 	Put is_mobile in the cache
+	Added 'search_engine' to the list of return values from browser_type()
 
 0.49	Fri Nov  7 17:16:25 EST 2014
 	Ensure different agents from the same IP don't clash in the cache
